string.c: dedup

* string.c (str_uminus): de-duplicate frozen string literals.
  [ruby-core:85542] [Bug #14475]