spec/ruby/core/string/uminus_spec.rb
@@ -35,11 +35,21 @@ ruby_version_is "2.3" do
       it "is an identity function if the string is frozen" do
         dynamic = %w(this string is frozen).join(' ').freeze
 
-        (-dynamic).should equal(dynamic)
-
         dynamic.should_not equal("this string is frozen".freeze)
-        (-dynamic).should_not equal("this string is frozen".freeze)
-        (-dynamic).should_not equal(-"this string is frozen".freeze)
+
+        ruby_version_is "2.5"..."2.6" do
+          (-dynamic).should equal(dynamic)
+
+          (-dynamic).should_not equal("this string is frozen".freeze)
+          (-dynamic).should_not equal(-"this string is frozen".freeze)
+        end
+
+        ruby_version_is "2.6" do
+          (-dynamic).should_not equal(dynamic)
+
+          (-dynamic).should equal("this string is frozen".freeze)
+          (-dynamic).should equal(-"this string is frozen".freeze)
+        end
       end
     end
   end
